Fixing horizontal scroll in mobile
The horizontal scroll was caused for ls-intro title.

--- a/source/assets/stylesheets/locastyle/base/_typography.sass
+++ b/source/assets/stylesheets/locastyle/base/_typography.sass
@@ -40,7 +40,7 @@ p
   font-weight: 300
   color: $gray4
   padding: 10px 30px
-  margin: 0 -30px 30px
+  margin: 0 0 30px
   background-color: #f7f7f7
   border-bottom: 1px solid rgba($gray1, .4)
 
@@ -87,7 +87,7 @@ p
 .ls-title-intro
 
   &[class*="ls-ico"]
-    padding-left: 82px
+    padding-left: 54px
 
     & + p
       padding-left: 52px
@@ -107,3 +107,5 @@ p
   .ls-intro,
   .ls-title-intro
     padding: 30px
+    margin-right: -30px
+
